vlib/v/checker/tests/mut_int.out
vlib/v/checker/tests/mut_int.vv:1:14: error: mutable arguments are only allowed for arrays, maps, structs and pointers
return values instead: `fn foo(mut n int) {` => `fn foo(n int) int {`
    1 | fn foo(mut x int) {
      |              ~~~
    2 | }
    3 |
